# test

./: .vimrc  merge_sort.cpp  readme.md  readme.txt  sUdiag.py  tmux.conf
algo/: merge_sort.cpp
pulse-test/: CMakeLists.txt  pulse-input-handler.cpp  pulse-input-handler.h  record.cpp
raspberry/: raspberry_setting.md
raspberry/myHome/: CMakeLists.txt  check_environ.cc
raspberry/myHome/scd/: sensirion_sw_i2c_implementation.c
raspberry/scd30/: Makefile  scd30_example_usage.c  scd30_example_usage_hw_i2c  scd30_example_usage_sw_i2c  scd_git_version.c  sensirion_arch_config.h  tags
raspberry/scd30/hw_i2c/sample-implementations/arduino-alt-i2c/: .i2c_master_lib.cpp.swp
raspberry/scd30/sw_i2c/: sensirion_sw_i2c_implementation.c
settings/: bashrc  vimrc
settings/vim/: .netrwhist
tensor/: readme.md
utils/: RingBuff.h  RingBuff.hpp
utils/audio/: pcm2wav.py
utils/openmp/: 48k_s32le_6ch.pcm.REMOVED.git-id  CMakeLists.txt  main.cc  test.cc
utils/pjsua/: CMakeLists.txt  samples.cc
utils/pulse/control/: CMakeLists.txt  PulseControls.cc  PulseControls.cpp  PulseControls.h
utils/pulse/player/: CMakeLists.txt  PulsePlayer.cc  PulsePlayer.cpp  PulsePlayer.h
utils/python/serialLogger/: sUdiag.py
utils/ring-buff/: Makefile  RingBuff.hpp
utils/sdbus/: CMakeLists.txt  SdBusProxy.cc  SdBusProxy.cpp  SdBusProxy.h  logs.h  service_exam.c  service_exam.cc
utils/speex/: CMakeLists.txt
utils/speex/ka-src/: CMakeLists.txt  SpeexSrc.cc  SpeexSrc.cpp  SpeexSrc.h
utils/speex/speextest/: CMakeLists.txt  main.cpp  rec.pcm
